--- a/photos.html
+++ b/photos.html
@@ -101,7 +101,7 @@
     <a href="photo46.jpg" data-lightbox="gallery" data-title="Photo 46"><img src="photo46.jpg" alt="Photo 46"></a>
     <a href="photo47.jpg" data-lightbox="gallery" data-title="Photo 47"><img src="photo47.jpg" alt="Photo 47"></a>
     <a href="photo48.jpg" data-lightbox="gallery" data-title="Photo 48"><img src="photo48.jpg" alt="Photo 48"></a>
-    <a href="photo50.JPG" data-lightbox="gallery" data-title="Photo 50"><img src="photo50.JPG" alt="Photo 50"></a>
+    <a href="photo50.jpg" data-lightbox="gallery" data-title="Photo 50"><img src="photo50.jpg" alt="Photo 50"></a>
     <a href="photo51.jpeg" data-lightbox="gallery" data-title="Photo 51"><img src="photo51.jpeg" alt="Photo 51"></a>
     <a href="photo52.jpeg" data-lightbox="gallery" data-title="Photo 52"><img src="photo52.jpeg" alt="Photo 52"></a>
     <a href="photo54.jpeg" data-lightbox="gallery" data-title="Photo 54"><img src="photo54.jpeg" alt="Photo 54"></a>
