--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       flex-wrap: wrap;
       justify-content: center;
       gap: 15px;
-      margin: 20px 0;
+      margin-bottom: 30px;
     }
 
     nav a {
@@ -44,19 +44,14 @@
       text-align: center;
       font-size: 2.5em;
       margin-bottom: 10px;
-      animation: fadeIn 3s ease-in-out;
-    }
-
-    @keyframes fadeIn {
-      0% { opacity: 0; transform: translateY(-20px); }
-      100% { opacity: 1; transform: translateY(0); }
+      animation: fadeIn 2s ease-in-out;
     }
 
     .intro-text {
       text-align: center;
-      font-size: 1.4em;
-      margin-bottom: 40px;
-      animation: fadeIn 4s ease-in-out;
+      font-size: 1.3em;
+      margin-bottom: 30px;
+      animation: fadeIn 3s ease-in-out;
     }
 
     section {
@@ -67,13 +62,21 @@
 
     section h2 {
       text-align: center;
+      font-size: 1.8em;
       margin-bottom: 15px;
+      border-bottom: 2px solid #00aced;
+      display: inline-block;
     }
 
     section p {
       font-size: 1.1em;
       line-height: 1.6em;
       text-align: justify;
+    }
+
+    @keyframes fadeIn {
+      0% { opacity: 0; transform: translateY(-20px); }
+      100% { opacity: 1; transform: translateY(0); }
     }
 
     @media (max-width: 600px) {
@@ -96,16 +99,19 @@
       <a href="photos.html">Photos</a>
       <a href="contact.html">Contact</a>
       <a href="cv.html">CV</a>
+      <a href="experience.html">Experience</a>
+      <a href="application.html">Application</a>
+      <a href="hobbies.html">Hobbies</a>
     </nav>
 
     <section id="about">
       <h2>About Me</h2>
-      <p>My name is <strong>John Anthony Pedrozo</strong>. I'm 21 years old and from Baguio City. I have a lifelong goal of serving my country as a soldier in the army. I believe in discipline, dedication, and making a difference in my nation.</p>
+      <p>My name is <strong>John Anthony G. Pedrozo</strong>. I'm 21 years old and currently based in Baguio City. I have a lifelong dream of becoming a soldier in the Philippine Army. I believe in discipline, dedication, and making a meaningful contribution to the country through service and leadership.</p>
     </section>
 
     <section id="bio">
       <h2>Bio</h2>
-      <p>I love capturing random moments, especially the beauty of nature through my lens. I also enjoy taking photos of cars, particularly vintage and old-school JDM models. Photography is my way of freezing time and expressing creativity.</p>
+      <p>I enjoy capturing meaningful moments and landscapes through photography, especially nature scenes. It’s my way of freezing time and expressing creativity. My passion for visual storytelling allows me to see beauty in everyday life and connect with people through imagery.</p>
     </section>
   </div>
 </body>
