--- a/application.html
+++ b/application.html
@@ -55,6 +55,25 @@
       margin-top: 40px;
       white-space: pre-line;
     }
+
+    .hobby-button {
+      text-align: center;
+      margin-top: 30px;
+    }
+
+    .hobby-button a {
+      background-color: #00aced;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background 0.3s;
+    }
+
+    .hobby-button a:hover {
+      background-color: #0084a2;
+    }
   </style>
 </head>
 <body>
@@ -99,6 +118,10 @@
         Sincerely,<br><br>
         JOHN ANTHONY G. PEDROZO
       </p>
+
+      <div class="hobby-button">
+        <a href="hobbies.html">View My Hobbies</a>
+      </div>
     </div>
   </div>
 </body>
