--- a/application.html
+++ b/application.html
@@ -56,6 +56,7 @@
       white-space: pre-line;
     }
 
+    
     .hobby-button {
       text-align: center;
       margin-top: 30px;
@@ -77,6 +78,7 @@
   </style>
 </head>
 <body>
+  
   <nav>
     <a href="index.html">Home</a>
     <a href="motto.html">Motto</a>
@@ -87,8 +89,10 @@
     <a href="cv.html">CV</a>
     <a href="experience.html">Experience</a>
     <a href="application.html">Application Letter</a>
+    <a href="hobbies.html">Hobbies</a> <!-- Added to nav -->
   </nav>
 
+  
   <div class="overlay">
     <h1>Application Letter</h1>
     <div class="letter">
@@ -119,6 +123,7 @@
         JOHN ANTHONY G. PEDROZO
       </p>
 
+      
       <div class="hobby-button">
         <a href="hobbies.html">View My Hobbies</a>
       </div>
