--- a/experience.html
+++ b/experience.html
@@ -22,6 +22,7 @@
       color: white;
       margin: 0 15px;
       text-decoration: none;
+      font-weight: bold;
     }
 
     nav a:hover {
@@ -82,6 +83,9 @@
     <a href="photos.html">Photos</a>
     <a href="contact.html">Contact</a>
     <a href="cv.html">CV</a>
+    <a href="experience.html">Experience</a>
+    <a href="application.html">Application Letter</a>
+    <a href="hobbies.html">Hobbies</a>
   </nav>
 
   <div class="overlay">
