--- a/experience.html
+++ b/experience.html
@@ -75,18 +75,18 @@
   </style>
 </head>
 <body>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="motto.html">Motto</a>
-    <a href="goals.html">Goals</a>
-    <a href="music.html">Music</a>
-    <a href="photos.html">Photos</a>
-    <a href="contact.html">Contact</a>
-    <a href="cv.html">CV</a>
-    <a href="experience.html">Experience</a>
-    <a href="application.html">Application Letter</a>
-    <a href="hobbies.html">Hobbies</a>
-  </nav>
+  <div class="overlay">
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="motto.html">Motto</a>
+      <a href="goals.html">Goals</a>
+      <a href="music.html">Music</a>
+      <a href="photos.html">Photos</a>
+      <a href="contact.html">Contact</a>
+      <a href="cv.html">CV</a>
+      <a href="experience.html">Experience</a>
+      <a href="application.html">Application</a>
+    </nav>
 
   <div class="overlay">
     <h1>My Experience</h1>
