--- a/application.html
+++ b/application.html
@@ -55,26 +55,6 @@
       margin-top: 40px;
       white-space: pre-line;
     }
-
-    
-    .hobby-button {
-      text-align: center;
-      margin-top: 30px;
-    }
-
-    .hobby-button a {
-      background-color: #00aced;
-      color: white;
-      padding: 10px 20px;
-      border-radius: 6px;
-      text-decoration: none;
-      font-weight: bold;
-      transition: background 0.3s;
-    }
-
-    .hobby-button a:hover {
-      background-color: #0084a2;
-    }
   </style>
 </head>
 <body>
@@ -89,10 +69,9 @@
     <a href="cv.html">CV</a>
     <a href="experience.html">Experience</a>
     <a href="application.html">Application Letter</a>
-    <a href="hobbies.html">Hobbies</a> <!-- Added to nav -->
+    <a href="hobbies.html">Hobbies</a>
   </nav>
 
-  
   <div class="overlay">
     <h1>Application Letter</h1>
     <div class="letter">
@@ -122,11 +101,6 @@
         Sincerely,<br><br>
         JOHN ANTHONY G. PEDROZO
       </p>
-
-      
-      <div class="hobby-button">
-        <a href="hobbies.html">View My Hobbies</a>
-      </div>
     </div>
   </div>
 </body>
