--- a/experience.html
+++ b/experience.html
@@ -86,6 +86,7 @@
       <a href="cv.html">CV</a>
       <a href="experience.html">Experience</a>
       <a href="application.html">Application</a>
+      <a href="hobbies.html">Hobbies</a>
     </nav>
 
   <div class="overlay">
