--- a/hobbies.html
+++ b/hobbies.html
@@ -80,6 +80,7 @@
       <a href="cv.html">CV</a>
       <a href="experience.html">Experience</a>
       <a href="application.html">Application</a>
+      <a href="hobbies.html">Hobbies</a>
     </nav>
 
     <h1>My Hobbies</h1>
