--- a/music.html
+++ b/music.html
@@ -72,6 +72,9 @@
     <a href="photos.html">Photos</a>
     <a href="contact.html">Contact</a>
     <a href="cv.html">CV</a>
+    <a href="experience.html">Experience</a>
+    <a href="application.html">Application Letter</a>
+    <a href="hobbies.html">Hobbies</a>
   </nav>
 
   <div class="overlay">
