--- a/photos.html
+++ b/photos.html
@@ -72,17 +72,17 @@
     
     <!-- Side Navigation -->
     <nav class="side-nav">
-      <a href="index.html">🏠 Home</a>
-      <a href="about.html">👤 About Me</a>
-      <a href="motto.html">💬 Motto</a>
-      <a href="goals.html">🎯 Goals</a>
-      <a href="music.html">🎵 Music</a>
-      <a href="photos.html">🖼️ Photos</a>
-      <a href="cv.html">📄 CV</a>
-      <a href="experience.html">💼 Experience</a>
-      <a href="application.html">📨 Application</a>
-      <a href="hobbies.html">🏀 Hobbies</a>
-      <a href="contact.html">📱 Contact</a>
+      <a href="index.html">Home</a>
+      <a href="about.html">About Me</a>
+      <a href="motto.html">Motto</a>
+      <a href="goals.html">Goals</a>
+      <a href="music.html">Music</a>
+      <a href="photos.html">Photos</a>
+      <a href="cv.html">CV</a>
+      <a href="experience.html">Experience</a>
+      <a href="application.html">Application</a>
+      <a href="hobbies.html">Hobbies</a>
+      <a href="contact.html">Contact</a>
     </nav>
    
   <div class="overlay">
